# mscomplex3d

./: .gitignore  .gitmodules  CMakeLists.txt  Documentation for PYMS3D.md  Readme.md  config.h.in  main.cpp  pyproject.toml  pytest.ini  setup.py
cmake/: FindOpenCL.cmake
core/: CMakeLists.txt  aabb.h  grid.cpp  grid.h  grid_dataset.h  grid_dataset_algs.cpp  grid_dataset_base.cpp  grid_dataset_inl.h  grid_dataset_outcore.cpp  grid_mscomplex.h  grid_mscomplex_algs.cpp  grid_mscomplex_base.cpp  grid_mscomplex_inl.h  grid_mscomplex_merge_dag.cpp  grid_mscomplex_outcore.cpp  grid_outcore.cpp  grid_outcore.h  main.cpp  n_vector.h  utl.cpp  utl.h
core/OpenCL/: grid_dataset.clh  grid_dataset_cl.cpp  grid_dataset_cl.h
dmsc/: grid.h  grid_datamanager.cpp  grid_datamanager.h  grid_dataset.cpp  grid_dataset.h  grid_dataset_algs.cpp  grid_dataset_bfs.h  grid_dataset_inl.h  grid_dataset_outcore.cpp  grid_mscomplex.cpp  grid_mscomplex.h  grid_mscomplex_algs.cpp  grid_mscomplex_base.cpp  grid_mscomplex_inl.h  grid_mscomplex_outcore.cpp  grid_outcore.cpp  utl.h
dmsc/OpenCL/: grid_dataset.clh  grid_dataset_assigngradient.cl  grid_dataset_cl.cpp  grid_dataset_cl.h  grid_dataset_markandcollect.cl
pyms3d/: CMakeLists.txt  Readme.md  TestIndexing.py  main.cpp  pyms3d.cpp
pyms3d/examples/: Hydrogen.py  Hydrogen1.py  Hydrogen2.py  Hydrogen4.pvsm  Readme.md  pyms3d.pyd
pyms3d_core/: __init__.py
testing/: test_hydrogen.py  test_multiproc.py  test_pickling.py
vtk_viewer/: vtk_viewer.cmake
