[build-system]
requires = [
  "scikit-build-core[pyproject]",
  "pybind11",
  "numpy",
  "cibuildwheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyms3d_core"
version = "0.1.0"
description = "Python bindings for the MSComplex3D C++ library"
authors = [
  { name = "Sachin Kishan" }
]
license = { text = "MIT" }
dependencies = [
  "numpy",
]

# ──────────────────────────────────────────────────────────
[tool.scikit-build]
# Where the cmake builds files go during the building process
build-dir = "../build_pyms3d"

# Which Python packages go into your wheel

wheel.packages = ["pyms3d_core"]
install.strip = false
install.components = ["python"]

# ──────────────────────────────────────────────────────────
[tool.scikit-build.cmake]

# build-type = "Debug"
source-dir = "."
args = [
  "-DBUILD_PYMS3D=ON",
  "-DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}"
#  "-DCMAKE_INSTALL_PREFIX=${PROJECT_ROOT}/../package_installs"
]
# After building, invoke `install`
targets = ["install"]

# ──────────────────────────────────────────────────────────
[tool.cibuildwheel]
# Which interpreters/arches
build = "cp3{7,8,9,10,11}-*"
skip  = ["pp*", "cp36*", "*-musllinux_*"]
archs = ["auto64"]